--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./module3-solution/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Our Restaurant</title>
   </head>
   <body>
