--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           >
             <li>
               <a
-                href="#"
+                href="#chicken"
                 class="block py-2 pl-3 pr-4 text-red-800 bg-transparent rounded md:bg-transparent md:text-red-700 md:p-0 "
                 aria-current="page"
                 >Chicken</a
@@ -58,14 +58,14 @@
             </li>
             <li>
               <a
-                href="#"
+                href="#beef"
                 class="block py-2 pl-3 pr-4 text-red-800 bg-transparent rounded md:bg-transparent md:text-red-700 md:p-0 "
                 >Beef</a
               >
             </li>
             <li>
               <a
-                href="#"
+                href="#sushi"
                 class="block py-2 pl-3 pr-4 text-red-800 bg-transparent rounded md:bg-transparent md:text-red-700 md:p-0 "
                 >Sushi</a
               >
@@ -82,8 +82,8 @@
     </header>
     <main>
       <div class="menu">
-        <article class="card">
-          <h2>Chicken</h2>
+        <article id="chicken" class="card">
+          <h2 class="font-semibold text-xl"  >Chicken</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
             quo saepe animi ut beatae facere placeat ipsum repudiandae debitis,
@@ -91,8 +91,8 @@
             possimus earum.
           </p>
         </article>
-        <article class="card">
-          <h2>Beef</h2>
+        <article id="beef" class="card">
+          <h2 class="font-semibold text-xl">Beef</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
             quo saepe animi ut beatae facere placeat ipsum repudiandae debitis,
@@ -100,8 +100,8 @@
             possimus earum.
           </p>
         </article>
-        <article class="card">
-          <h2>Sushi</h2>
+        <article id="sushi" class="card">
+          <h2 class="font-semibold text-xl">Sushi</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
             quo saepe animi ut beatae facere placeat ipsum repudiandae debitis,
